Refactor query analyzer and processor, fix cache result set, remove broken Sosl query and optimized ForcePreparedStatement